# Advanced-Python-Course

./: .gitignore  Dockerfile  pyproject.toml
hw-3/: Matrix.py  Matrix2.py  Matrix3.py
hw-3/artifacts/: A.txt  AB.txt  C.txt  CD.txt  D.txt  hash.txt  matrix*.txt  task2-matrix+.txt  task2-matrix@.txt
hw-4/: fib.py  integrate.py  task-3.py
hw-4/artifacts/: task1-fib-results.txt  task2-integration_times.txt  task3-parallel_app.txt
hw_1/: nl.py  tail.py  wc.py
hw_1/artifacts/: nl_artiafct  tail_artifacts  text_file_1.txt  text_file_3.txt  wc_artifacts
hw_2/: save_table_and_pdf.py  tex_generator.py  tex_pdf_creator.py  tex_table_loader.py
hw_2/artifacts/: my_library_link.txt  table.tex
latex_image_and_table_generator/: __init__.py  tex_generator.py
