[project]
name = "advanced-python-course"
version = "0.1.0"
description = ""
authors = [
    {name = "max",email = "maxvasilek@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pylint (>=3.3.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
